# zero-python

./: .gitignore  README.md
czero/: CMakeLists.txt  build.sh
czero/include/bus/: i2c.h
czero/include/common/: assert.h  errno.h  time.h  types.h
czero/src/bus/: i2c.c
pyzero/: ioc.py  zero.py
pyzero/bus/: i2c.py  spi.py
pyzero/chip/: w25qxx.py
scripts/: env.sh
