PROJECT(zero C CXX)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
ENABLE_LANGUAGE(ASM)

SET(CMAKE_VERBOSE_MAKEFILE OFF)

SET(CMAKE_C_COMPILER ${TOOLCHAIN_PREFIX}gcc)
SET(CMAKE_CXX_COMPILER $(TOOLCHAIN_PREFIX)g++)

SET(CMAKE_C_FLAGS "-std=gnu99 -o3 -Werror -Wno-error=format-security -s")

SET(CMAKE_CXX_FLAGS "-std=c++0x -o3 -Werror -Wno-error=format-security -s")

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src/bus BUS_SOURCES)

ADD_LIBRARY(zero SHARED ${BUS_SOURCES})
TARGET_LINK_LIBRARIES(zero)